# cmake版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

# 项目名
PROJECT(liblogger VERSION 1.0)

# 开关
OPTION(VLD "use Visual Leak Detector to check memory on windows" ON)
OPTION(RELEASE "compile the release version" OFF)

# 设置模块路径
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/common/3rd/vld)

# 平台
IF(MSVC)
	SET(WINDOWS ON)
	SET(LINUX OFF)
ELSEIF(CMAKE_COMPILER_IS_GNUCXX)
	SET(WINDOWS OFF)
	SET(LINUX ON)
	SET(VLD OFF)
ENDIF()

# 显示参数
MESSAGE(STATUS "VLD:" ${VLD})
MESSAGE(STATUS "RELEASE:" ${RELEASE})
MESSAGE(STATUS "WINDOWS:" ${WINDOWS})
MESSAGE(STATUS "LINUX:" ${LINUX})
MESSAGE(STATUS "PROJECT_SOURCE_DIR:" ${PROJECT_SOURCE_DIR})

# 添加源文件
# SET(Appender
# 	${PROJECT_SOURCE_DIR}/Appender/AppenderSkeleton.cc
# 	${PROJECT_SOURCE_DIR}/Appender/AppenderSkeleton.h
# 	${PROJECT_SOURCE_DIR}/Appender/LayoutAppender.cc
# 	${PROJECT_SOURCE_DIR}/Appender/LayoutAppender.h
# 	${PROJECT_SOURCE_DIR}/Appender/FileAppender.h
# 	${PROJECT_SOURCE_DIR}/Appender/FileAppender.cc
# 	${PROJECT_SOURCE_DIR}/Appender/RollingFileAppender.h
# 	${PROJECT_SOURCE_DIR}/Appender/RollingFileAppender.cc
# 	${PROJECT_SOURCE_DIR}/Appender/DailyRollingFileAppender.h
# 	${PROJECT_SOURCE_DIR}/Appender/DailyRollingFileAppender.cc
# )


# SET(all_srcs
# 	${Appender}
# 	${Layout}
# 	${PROJECT_SOURCE_DIR}/Hierarchy.h
# 	${PROJECT_SOURCE_DIR}/Hierarchy.cc
# 	${PROJECT_SOURCE_DIR}/Category.h
# 	${PROJECT_SOURCE_DIR}/Category.cc
# )
SET(srcs
	${PROJECT_SOURCE_DIR}/include/ConfigureFailure.h
	${PROJECT_SOURCE_DIR}/include/Priority.h
	${PROJECT_SOURCE_DIR}/include/Record.h
	${PROJECT_SOURCE_DIR}/include/Layout/Layout.h
	${PROJECT_SOURCE_DIR}/include/Layout/BasicLayout.h
	${PROJECT_SOURCE_DIR}/include/Layout/SimpleLayout.h
	${PROJECT_SOURCE_DIR}/include/Layout/PatternLayout.h
	${PROJECT_SOURCE_DIR}/include/Appender/Appender.h

	${PROJECT_SOURCE_DIR}/src/ConfigureFailure.cc
	${PROJECT_SOURCE_DIR}/src/Priority.cc
	${PROJECT_SOURCE_DIR}/src/Record.cc
	${PROJECT_SOURCE_DIR}/src/Layout/BasicLayout.cc
	${PROJECT_SOURCE_DIR}/src/Layout/SimpleLayout.cc
	${PROJECT_SOURCE_DIR}/src/Layout/PatternLayout.cc
	${PROJECT_SOURCE_DIR}/src/Appender/Appender.cc
)

# 生成目录结构
SOURCE_GROUP(TREE ${PROJECT_SOURCE_DIR} FILES ${srcs})

# 设置输出目录
SET(CMAKE_DEBUG_POSTFIX "d")
SET(CMAKE_SUPPRESS_REGENERATION true)
SET(OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output)
SET(OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIRECTORY})
SET(OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIRECTORY})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIRECTORY_DEBUG})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIRECTORY_DEBUG})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_DIRECTORY_DEBUG})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIRECTORY_RELEASE})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIRECTORY_RELEASE})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_DIRECTORY_RELEASE})

# 编译项
IF(WINDOWS)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd")
	SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD")
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_WARNINGS)
	ADD_COMPILE_OPTIONS(/utf-8)
ELSEIF(LINUX)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall -ggdb")
	SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -Wall")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -std=c++11")
	ADD_DEFINITIONS(-m64)
ENDIF()

# 显式输出编译选项
IF(RELEASE)
	SET(CMAKE_BUILD_TYPE Release)
	MESSAGE(STATUS "flags:" ${CMAKE_CXX_FLAGS_RELEASE} ${CMAKE_CXX_FLAGS})
ELSE()
	SET(CMAKE_BUILD_TYPE Debug)
	MESSAGE(STATUS "flags:" ${CMAKE_CXX_FLAGS_DEBUG} ${CMAKE_CXX_FLAGS})
ENDIF()

# libcommon
ADD_SUBDIRECTORY(common)

# vld
IF(VLD)
	FIND_PACKAGE(VLD)
	IF(VLD_FOUND)
		ADD_DEFINITIONS(-DUSE_VLD)
		INCLUDE_DIRECTORIES(${VLD_INCLUDE_DIRS})
	ENDIF()
ENDIF()

# 头文件
SET(LOGGER_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include CACHE PATH "logger include directory" FORCE)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${COMMON_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LOGGER_INCLUDE_DIRS})

# 库目录
LINK_DIRECTORIES(${OUTPUT_DIRECTORY})

# 生成静态库、动态库
ADD_LIBRARY(logger-static STATIC ${srcs})
ADD_LIBRARY(logger SHARED ${srcs})
TARGET_LINK_LIBRARIES(logger-static common-static)
TARGET_LINK_LIBRARIES(logger common)
IF(WINDOWS)
	TARGET_LINK_LIBRARIES(logger ws2_32 iphlpapi psapi userenv)
	TARGET_COMPILE_DEFINITIONS(logger PRIVATE BUILDING_COMMON_SHARED)
ELSEIF(LINUX)
	TARGET_COMPILE_OPTIONS(logger PRIVATE -fPIC -fvisibility=hidden)
ENDIF()

# 添加测试项目
ADD_SUBDIRECTORY(test)